--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,12 @@
   --max-width: 1100px;
   --font-size: 16px;
 
-  --theme-secondary-light: #f3e2f5;
-  --theme-secondary-dark: #c1388c;
-  --theme-primary: #4296c1;
+  --theme-primary-reg: #4297c2;
+  --theme-primary-dark: #1d6488;
   --background: #e5f2fe;
+  --theme-secondary-light: #f3e2f5;
+  --theme-secondary-reg: #c93e8f;
+  --theme-secondary-dark: #86205c;
 
   --text-color-header: #2d2d2d;
   --text-color-paragraph: #4b4b4b;
