--- a/src/components/auth/auth.module.css
+++ b/src/components/auth/auth.module.css
@@ -13,15 +13,6 @@
   padding: 0.5rem;
 }
 
-.button {
-  margin-top: 1rem;
-  border: 4px solid var(--theme-secondary-dark);
-  border-radius: var(--border-radius);
-  font-weight: 500;
-  background-color: var(--theme-secondary-dark);
-  color: var(--theme-secondary-light);
-}
-
 .localAuthContainer,
 .socialAuthContainer {
   display: flex;
@@ -39,12 +30,10 @@
   width: 100%;
 }
 
-.submitButton {
-  padding: 1rem;
-}
-
 .socialAuthButton {
+  margin-top: 1rem;
   flex: 1;
+  text-align: left;
 }
 
 .formTitle {
