:recycle: Refactor auth components
Refactor auth components

--- a/src/app/(auth)/auth.module.css
+++ b/src/app/(auth)/auth.module.css
@@ -6,7 +6,10 @@
   min-height: 100vh;
 }
 
-.authContainer {
+.formContainer {
   width: 40%;
+  max-width: 500px;
+  min-width: 260px;
   padding: 1rem;
+  margin: 1rem auto;
 }
