:lipstick: Incorporate  mui v5 theme
Incorporate mui v5 theme

--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -20,13 +20,10 @@
   justify-content: center;
 }
 
-.title {
+.container .title {
   font-size: 8rem;
   flex: 1;
   color: var(--theme-primary-reg);
-}
-.subtitle {
-  font-size: 2rem;
 }
 
 .buttonsContainer {
