--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -1,23 +1,3 @@
-:root {
-  --max-width: 1100px;
-  --font-size: 16px;
-
-  --border-radius: 0.5rem;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--text-color-paragraph));
-  background: --background;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
