--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -7,3 +7,12 @@
     @apply text-gray-700;
   }
 }
+
+@layer components {
+  .btn-primary {
+    @apply rounded bg-violet p-6 font-bold text-white hover:bg-violet-light disabled:cursor-not-allowed disabled:opacity-50;
+  }
+  .paper {
+    @apply rounded bg-slate-50 p-4 shadow-md;
+  }
+}
