--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root  {
+  --navbar-height: 8rem;
+}
+
 @layer base {
   html {
     @apply text-gray-700;
