--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -4,6 +4,7 @@
 
 :root {
   --navbar-height: 8rem;
+  --sidebar-width: 16rem;
 }
 
 @layer base {
@@ -21,6 +22,9 @@
   }
   .paper {
     @apply rounded bg-slate-50 p-4 shadow-md;
+  }
+  .sidebar-item {
+    @apply m-0.5 cursor-pointer p-4 font-serif uppercase hover:bg-slate-200
   }
 }
 
