--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import '~react-toastify/dist/ReactToastify.min.css';
+
 :root {
   --navbar-height: 8rem;
   --sidebar-width-expanded: 16rem;
