:lipstick: Styled and added to profile editing page

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -28,7 +28,11 @@
     disabled:cursor-not-allowed disabled:opacity-50 disabled:hover:bg-violet;
   }
   .paper {
-    @apply rounded bg-slate-50 p-4 shadow-md;
+    @apply rounded bg-gray-200 p-4 shadow-md;
+  }
+
+  .title {
+    @apply font-serif font-bold text-lg
   }
 }
 
